GNOME Bugzilla – Bug 752341
GDM fails to publish correct X11-display to DBus
Last modified: 2016-11-10 19:00:25 UTC
GDM seems to have lost the functionality to register its display name with DBus since 3.14 GDM on Fedora 22 only delivers empty strings when querying the interface: qdbus --system org.gnome.DisplayManager /org/gnome/DisplayManager/Displays/3088753552 org.gnome.DisplayManager.Display.GetX11DisplayName -> [Invalid UTF-8] This also affects logind that is not able to publish the display name correctly, the "Display" property is always empty. GDM published its information correctly. Version tested: GDM 3.16.2
Of course, the second to last sentence should be: GDM 3.14 published its information correctly.
Just for ease of reproducing, the equivalent gdbus call: $ gdbus call --system --dest org.gnome.DisplayManager --object-path /org/gnome/DisplayManager/Displays/94122005586688 --method org.gnome.DisplayManager.Display.GetX11DisplayName And result (with GDM 3.18.2) is still: ('[Invalid UTF-8]',)
Created attachment 339505 [details] [review] daemon: update X11DisplayName on register display When a display registered, the sessions 'display-name' was already updated. The displays 'x11-display-name' however was not, so I've just added that. Of course that also meant that the 'x11-display-name' could no longer be constructor only.
Attachment 339505 [details] pushed as a0f63b3 - daemon: update X11DisplayName on register display
(Thanks!)