daemon: update X11DisplayName on register display

When a display registered, the sessions 'display-name' was already updated.
The displays 'x11-display-name' however was not, so I've just added that.
Of course that also meant that the 'x11-display-name' could no longer be
constructor only.

https://bugzilla.gnome.org/show_bug.cgi?id=752341