daemon/gdm-display.c
@@ -1187,7 +1187,7 @@ gdm_display_class_init (GdmDisplayClass *klass)
                                                               "x11-display-name",
                                                               "x11-display-name",
                                                               NULL,
-                                                              G_PARAM_READWRITE | G_PARAM_CONSTRUCT_ONLY));
+                                                              G_PARAM_READWRITE | G_PARAM_CONSTRUCT));
         g_object_class_install_property (object_class,
                                          PROP_SEAT_ID,
                                          g_param_spec_string ("seat-id",
